--- a/src/main/webapp/users/accueil.xhtml
+++ b/src/main/webapp/users/accueil.xhtml
@@ -13,7 +13,7 @@
 		<div class="container">
 			
 				<div class="block-action">
-				<a class="a" href="#">
+				<a class="a" href="createVote.xhtml">
 					<div class="btn-action">
 						<i class="fa fa-list-alt" aria-hidden="true"></i>
 						<span class="title-action">Proposer un vote</span>
