--- a/src/main/webapp/users/accueil.xhtml
+++ b/src/main/webapp/users/accueil.xhtml
@@ -19,7 +19,7 @@
 						<span class="title-action">Proposer un vote</span>
 					</div>
 				</a>
-				<a class="a" href="#">	
+				<a class="a" href="StudentLink/../listeVote.xhtml">	
 					<div class="btn-action">
 						<i class="fa fa-list" aria-hidden="true"></i>
 						<span class="title-action">Voir la liste des votes</span>
